[gd_scene load_steps=9 format=3 uid="uid://c76ybxdwy7mbk"]

[ext_resource type="Script" path="res://actors/player_control.gd" id="1_5grjc"]
[ext_resource type="Texture2D" uid="uid://b11ig3w15rpen" path="res://assets/right_arrow.png" id="2_bddwp"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jmfbr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_14m14"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8aoqt"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s4lsb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cqyc5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g30d1"]

[node name="PlayerControl" type="Control"]
custom_minimum_size = Vector2(320, 50)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_5grjc")

[node name="PlayerMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PlayerHBoxContainer" type="HBoxContainer" parent="PlayerMarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PlayerMarginContainer/PlayerHBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 2

[node name="TurnIndicator" type="TextureRect" parent="PlayerMarginContainer/PlayerHBoxContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
modulate = Color(0, 0.4, 0.0784314, 1)
layout_mode = 2
texture = ExtResource("2_bddwp")
expand_mode = 3

[node name="PlayerLabel" type="Label" parent="PlayerMarginContainer/PlayerHBoxContainer"]
layout_mode = 2
text = "foo"
horizontal_alignment = 2
vertical_alignment = 1
max_lines_visible = 1

[node name="PlayerCheckButton" type="CheckButton" parent="PlayerMarginContainer/PlayerHBoxContainer"]
visible = false
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_jmfbr")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_14m14")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_8aoqt")
theme_override_styles/hover = SubResource("StyleBoxEmpty_s4lsb")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_cqyc5")
theme_override_styles/focus = SubResource("StyleBoxEmpty_g30d1")
